--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
     # ports:
     #   - "8000:8000"
     environment:
-      WORDPRESS_DB_HOST: db:3306
+      WORDPRESS_DB_HOST: db
       WORDPRESS_DB_USER: wordpress
       WORDPRESS_DB_PASSWORD: wordpress
     labels:
@@ -78,26 +78,21 @@ services:
           # Activer traefik pour qu'il applique ces règles sur son propre conteneur
           - traefik.enable=true
           - traefik.docker.network=web
-          # Activation SSL pour protocol https sur le router du dashboard
-          - traefik.http.routers.traefik-dash.tls=true
-          # Loadbalancer nécessaire pour le swarm (voir doc traefik)
+          #- traefik.http.routers.traefik-dash.tls=true
           - traefik.http.services.traefik-dash.loadbalancer.server.port=8080
           - traefik.http.routers.traefik-dash.entrypoints=toto,totoSecure
           - traefik.http.routers.traefik-dash.service=api@internal
-          #### Regle d'accés par DNS
-          - traefik.http.routers.traefik-dash.rule=Host(`quentivas.net`)
-          ######## Middlewares ########
+         # - traefik.http.routers.traefik-dash.rule=Host(`quentivas.net`)
           # Redirection http to https
-          - traefik.http.routers.traefik-dash.middlewares=redirect-to-https
+          #- traefik.http.routers.traefik-dash.middlewares=redirect-to-https
           # Middleware d'authentification
-          - traefik.http.routers.traefik-dash.middlewares=basic-auth
-          ######## DEFINITION DES MIDDLEWARES ########
-          - traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https
-          - traefik.http.routers.redirs.middlewares=redirect-to-https
-          - traefik.http.routers.redirs.rule=hostregexp(`{host:.+}`)
-          - traefik.http.routers.redirs.entrypoints=toto,totoSecure
-          # Devrait etre dans une ressource secrete
-          - traefik.http.middlewares.basic-auth.basicauth.users=admin:$$apr1$$nN1cqEn0$$/.R9RmImw2ovsp6X1Gavf.,user:$$apr1$$pvwSLi7k$$5DHFUg2SrTkVfeN5LZjpW/
+          #- traefik.http.routers.traefik-dash.middlewares=basic-auth
+          #MIDDLEWARES
+          #- traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https
+          #- traefik.http.routers.redirs.middlewares=redirect-to-https
+          #- traefik.http.routers.redirs.rule=hostregexp(`{host:.+}`)
+          #- traefik.http.routers.redirs.entrypoints=toto,totoSecure
+          #- traefik.http.middlewares.basic-auth.basicauth.users=admin:$$apr1$$nN1cqEn0$$/.R9RmImw2ovsp6X1Gavf.,user:$$apr1$$pvwSLi7k$$5DHFUg2SrTkVfeN5LZjpW/
 volumes:
     db_data:
 network: 
