--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,9 @@ services:
   reverse-proxy:
     # The official v2 Traefik docker image
     image: traefik:v2.5
+    networks: 
+      - web
+      - back
     # Enables the web UI and tells Traefik to listen to docker
     command: 
       - "--api.insecure=true"
