--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -85,7 +85,7 @@ services:
         - traefik.http.services.traefik-dash.loadbalancer.server.port=8080
         - traefik.http.routers.traefik-dash.entrypoints=web,shrecksecure
         - traefik.http.routers.traefik-dash.service=api@internal
-        - traefik.http.routers.traefik-dash.rule=PathPrefix('/dashboard')
+        - traefik.http.routers.traefik-dash.rule=PathPrefix('/dashboard/')
           # Redirection http to https
           #- traefik.http.routers.traefik-dash.middlewares=redirect-to-https
           # Middleware d'authentification
