--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,6 +42,9 @@ services:
       - "--providers.docker=true"
       - "--entrypoints.web.address=:80"
       - "--entrypoints.shrecksecure.address=:443"
+      - "--provider.docker.swarmMode=true"
+      - "--provider.docker.exposedbydefault=false"
+
       #- "--entrypoints.traefik.address=:8080"
       # - --debug=false
       # - --logLevel=ERROR
@@ -84,8 +87,8 @@ services:
           #- traefik.http.routers.traefik-dash.tls=true
         - traefik.http.services.traefik-dash.loadbalancer.server.port=8080
         - traefik.http.routers.traefik-dash.entrypoints=web,shrecksecure
-        - traefik.http.routers.traefik-dash.service=api@internal
         - traefik.http.routers.traefik-dash.rule=PathPrefix('/dashboard/')
+        - traefik.http.routers.traefik-dash.service=api@internal
           # Redirection http to https
           #- traefik.http.routers.traefik-dash.middlewares=redirect-to-https
           # Middleware d'authentification
