--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -94,10 +94,10 @@ services:
           # Middleware d'authentification
           #- traefik.http.routers.traefik-dash.middlewares=basic-auth
           #MIDDLEWARES
-          #- traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https
-          #- traefik.http.routers.redirs.middlewares=redirect-to-https
-          #- traefik.http.routers.redirs.rule=hostregexp(`{host:.+}`)
-          #- traefik.http.routers.redirs.entrypoints=toto,totoSecure
+          - traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https
+          - traefik.http.routers.redirs.middlewares=redirect-to-https
+          - traefik.http.routers.redirs.rule=hostregexp(`{host:.+}`)
+          - traefik.http.routers.redirs.entrypoints=web,shrecksecure
           #- traefik.http.middlewares.basic-auth.basicauth.users=admin:$$apr1$$nN1cqEn0$$/.R9RmImw2ovsp6X1Gavf.,user:$$apr1$$pvwSLi7k$$5DHFUg2SrTkVfeN5LZjpW/
 
 volumes:
