--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -89,7 +89,7 @@ services:
         - traefik.http.routers.traefik-dash.tls=true
         - traefik.http.services.traefik-dash.loadbalancer.server.port=8080
         - traefik.http.routers.traefik-dash.entrypoints=web,shrecksecure
-        - traefik.http.routers.traefik-dash.rule=PathPrefix(`/dashboard/`)
+        - traefik.http.routers.traefik-dash.rule=Host(`192.168.99.100`) && PathPrefix(`dashboard`)
         - traefik.http.routers.traefik-dash.service=api@internal
           # Redirection http to https
         - traefik.http.routers.traefik-dash.middlewares=redirect-to-https
