--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-
 version: '3'
 
 services:
@@ -37,16 +36,11 @@ services:
       - back
     # Enables the web UI and tells Traefik to listen to docker
     command: 
-      #- "--api.insecure=false"
+      - "--api.insecure=true"
       - "--api.dashboard=true"
       - "--providers.docker=true"
       - "--entrypoints.web.address=:80"
       - "--entrypoints.shrecksecure.address=:443"
-      - "--provider.docker.swarmMode=true"
-      - "--provider.docker.exposedbydefault=false"
-      - "--entrypoints.web.http.redirections.entrypoint.permanent=true"
-      - "--entrypoints.web.http.redirections.entrypoint.to=shrecksecure"
-      - "--entrypoints.web.http.redirections.entryPoint.scheme=https"
       #- "--entrypoints.traefik.address=:8080"
       # - --debug=false
       # - --logLevel=ERROR
@@ -69,7 +63,7 @@ services:
       # HTTPS
       - "443:443"
       # The Web UI (enabled by --api.insecure=true)
-      - "8080:8080"
+      # - "8080:8080"
     volumes:
       # So that Traefik can listen to the Docker events
       - /var/run/docker.sock:/var/run/docker.sock
@@ -86,22 +80,21 @@ services:
           # Activer traefik pour qu'il applique ces règles sur son propre conteneur
         - traefik.enable=true
         - traefik.docker.network=web
-        - traefik.http.routers.traefik-dash.tls=true
+          #- traefik.http.routers.traefik-dash.tls=true
         - traefik.http.services.traefik-dash.loadbalancer.server.port=8080
         - traefik.http.routers.traefik-dash.entrypoints=web,shrecksecure
-        - traefik.http.routers.traefik-dash.rule=Host(`192.168.99.100`)
         - traefik.http.routers.traefik-dash.service=api@internal
+        - traefik.http.routers.traefik-dash.rule=Host(`quentivas.net`)
           # Redirection http to https
-        - traefik.http.routers.traefik-dash.middlewares=redirect-to-https
+          #- traefik.http.routers.traefik-dash.middlewares=redirect-to-https
           # Middleware d'authentification
           #- traefik.http.routers.traefik-dash.middlewares=basic-auth
           #MIDDLEWARES
-        - traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https
-        - traefik.http.routers.redirs.middlewares=redirect-to-https
-        - traefik.http.routers.redirs.rule=hostregexp(`{host:.+}`)
-        - traefik.http.routers.redirs.entrypoints=web,shrecksecure
+          #- traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https
+          #- traefik.http.routers.redirs.middlewares=redirect-to-https
+          #- traefik.http.routers.redirs.rule=hostregexp(`{host:.+}`)
+          #- traefik.http.routers.redirs.entrypoints=toto,totoSecure
           #- traefik.http.middlewares.basic-auth.basicauth.users=admin:$$apr1$$nN1cqEn0$$/.R9RmImw2ovsp6X1Gavf.,user:$$apr1$$pvwSLi7k$$5DHFUg2SrTkVfeN5LZjpW/
-
 volumes:
     db_data:
 networks: 
