--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,7 +63,7 @@ services:
       # HTTPS
       - "443:443"
       # The Web UI (enabled by --api.insecure=true)
-      # - "8080:8080"
+      - "8080:8080"
     volumes:
       # So that Traefik can listen to the Docker events
       - /var/run/docker.sock:/var/run/docker.sock
@@ -84,7 +84,7 @@ services:
         - traefik.http.services.traefik-dash.loadbalancer.server.port=8080
         - traefik.http.routers.traefik-dash.entrypoints=web,shrecksecure
         - traefik.http.routers.traefik-dash.service=api@internal
-        #- traefik.http.routers.traefik-dash.rule=Host(`quentivas.net`)
+        - traefik.http.routers.traefik-dash.rule=PathPrefix(`/dashboard`)
           # Redirection http to https
           #- traefik.http.routers.traefik-dash.middlewares=redirect-to-https
           # Middleware d'authentification
@@ -115,4 +115,3 @@ networks:
 #       - "traefik.http.routers.whoami.rule=Host(`whoami.docker.localhost`)"
 #       - "traefik.http.routers.whoami.entrypoints=websecure"
 #       - "traefik.http.routers.whoami.tls=true"
-    
